Fixed spacing

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,13 +1,12 @@
 #projects {
-  /* Removed min-height to allow content to dictate height */
-  padding-top: 20px; /* Added padding to control top spacing */
-  padding-bottom: 20px; /* Added padding to control bottom spacing */
+  padding-top: 0px;
+  padding-bottom: 80px;
 }
 
 #projects h1 {
   font-size: 2.5rem;
-  margin-top: 10px; /* Reduced margin-top */
-  margin-bottom: 50px; /* Reduced margin-bottom */
+  margin-top: 10px;
+  margin-bottom: 50px;
   font-weight: 600;
 }
 
@@ -23,16 +22,16 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  margin-top: 50px; /* Reduced margin-top */
+  margin-top: 50px;
   width: 90%;
   margin: 0 auto;
 }
 
 .project {
   background-color: #333;
-  padding: 20px; /* Reduced padding */
+  padding: 20px;
   margin: 20px;
-  width: 30%; /* Reduced width */
+  width: 30%;
   box-sizing: border-box;
   border-radius: 10px;
   text-align: left;
